feat, chore: add video service, adjust dev and debug
